# true-recall

./: BUILDING.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Project.md  README.md  RELEASE_v1.0.md  STAGE6_COMPLETE.md
plan/: build-plan.md  stage-1-prompt.md  stage-2-prompt.md  stage-3-prompt.md  stage-4-prompt.md  stage-5-prompt.md  stage-6-prompt.md
src/: Config.cpp  Config.h  FocusTracker.cpp  FocusTracker.h  HotkeyManager.cpp  HotkeyManager.h  MonitorManager.cpp  MonitorManager.h  TrayIcon.cpp  TrayIcon.h  main.cpp
